full width on image when layout has bgImage & fixes bad spacing when mobile Amund Lindstøl 41 minutes ago

--- a/src/scss/components/_banner-image.scss
+++ b/src/scss/components/_banner-image.scss
@@ -2,14 +2,19 @@
 
 .banner-image {
   @media only screen and (min-width: $breakpoint-large) {
-    height: $height-banner;
     background-image: var(--banner-image-url);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+  }
 
-    padding: $spacer-x-small $spacer-large;
+  .banner-image--layout {
+    min-height: #{$height-banner};
     align-items: center;
     align-content: center;
+
+    @media only screen and (min-width: $breakpoint-large) {
+      padding: var(--spacer-medium) 0;
+    }
   }
 }
